out/production/TrabajoCompilador/y.output
   0  $accept : prog $end

   1  prog : ID BEGIN cuerpo END
   2       | ID cuerpo END
   3       | BEGIN END
   4       | ID BEGIN cuerpo
   5       | ID cuerpo
   6       | BEGIN cuerpo

   7  cuerpo : cuerpo sentencia
   8         | sentencia

   9  sentencia : sentencia_declaracion
  10            | sentencia_ejecucion

  11  sentencia_declaracion : tipo lista_variables ';'
  12                        | tipo lista_variables
  13                        | declaracion_funcion
  14                        | TYPEDEF ID ASIGNACION tipo '[' subrango ']' ';'
  15                        | TYPEDEF ID ASIGNACION tipo '[' subrango ';'
  16                        | TYPEDEF ID ASIGNACION tipo subrango ']' ';'
  17                        | TYPEDEF ID ASIGNACION tipo subrango ';'
  18                        | TYPEDEF ID ASIGNACION tipo '[' ']' ';'
  19                        | TYPEDEF ASIGNACION tipo '[' subrango ']' ';'
  20                        | TYPEDEF ID ASIGNACION '[' subrango ']' ';'
  21                        | TYPEDEF STRUCT '<' lista_tipos '>' '(' lista_variables ',' ')' ID ';'
  22                        | TYPEDEF STRUCT lista_tipos '(' lista_variables ',' ')' ID ';'
  23                        | TYPEDEF '<' lista_tipos '>' '(' lista_variables ',' ')' ID ';'
  24                        | TYPEDEF STRUCT '<' lista_tipos '>' '(' lista_variables ',' ')' ';'

  25  subrango : factor ',' factor
  26           | factor factor

  27  declaracion_funcion : tipo FUN ID '(' parametro ')' BEGIN cuerpo RET '(' expresion ')' ';' END
  28                      | tipo FUN ID '(' parametro ')' BEGIN cuerpo END
  29                      | FUN ID '(' parametro ')' BEGIN cuerpo RET '(' expresion ')' ';' END
  30                      | tipo ID '(' parametro ')' BEGIN cuerpo RET '(' expresion ')' ';' END
  31                      | tipo FUN '(' parametro ')' BEGIN cuerpo RET '(' expresion ')' ';' END
  32                      | tipo FUN ID parametro BEGIN cuerpo RET '(' expresion ')' ';' END
  33                      | tipo FUN ID '(' parametro ')' BEGIN cuerpo RET expresion ';' END
  34                      | tipo FUN ID '(' ')' BEGIN cuerpo RET '(' expresion ')' ';' END
  35                      | tipo FUN ID '(' parametro ')' cuerpo RET '(' expresion ')' ';' END
  36                      | tipo FUN ID '(' parametro ')' BEGIN cuerpo error
  37                      | tipo FUN ID '(' parametro ')' BEGIN END

  38  sentencia_ejecucion : asignacion
  39                      | condicion_if
  40                      | sentencia_print
  41                      | sentencia_while
  42                      | invocacion_funcion ';'
  43                      | GOTO ETIQUETA ';'
  44                      | GOTO ETIQUETA
  45                      | GOTO ';'
  46                      | ETIQUETA
  47                      | CML

  48  sentencia_while : REPEAT bloque_sentencia_ejecutable WHILE '(' condicion ')' ';'
  49                  | REPEAT bloque_sentencia_ejecutable '(' condicion ')' ';'
  50                  | REPEAT bloque_sentencia_ejecutable WHILE '(' condicion ')'
  51                  | REPEAT bloque_sentencia_ejecutable WHILE '(' ')' ';'
  52                  | REPEAT bloque_sentencia_ejecutable WHILE condicion ')' ';'
  53                  | REPEAT bloque_sentencia_ejecutable WHILE '(' condicion ';'
  54                  | REPEAT bloque_sentencia_ejecutable WHILE condicion ';'
  55                  | REPEAT WHILE '(' condicion ')' ';'

  56  sentencia_print : OUTF '(' CML ')' ';'
  57                  | OUTF '(' expresion ')' ';'
  58                  | OUTF '(' ')' ';'
  59                  | OUTF '(' expresion ')'
  60                  | OUTF '(' CML ')'
  61                  | OUTF CML ';'
  62                  | OUTF expresion ';'
  63                  | OUTF '(' error ')' ';'

  64  parametro : tipo ID
  65            | tipo

  66  invocacion_funcion : ID '(' expresion ')'
  67                     | ID '(' ')'

  68  bloque_sentencia_ejecutable : BEGIN lista_sentencias END

  69  lista_sentencias : lista_sentencias sentencia_ejecucion
  70                   | sentencia_ejecucion

  71  condicion_if : IF '(' condicion ')' THEN bloque_sentencia_ejecutable END_IF ';'
  72               | IF '(' condicion ')' THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable END_IF ';'
  73               | IF '(' condicion ')' bloque_sentencia_ejecutable END_IF ';'
  74               | IF '(' ')' THEN bloque_sentencia_ejecutable END_IF ';'
  75               | IF '(' condicion ')' THEN error END_IF ';'
  76               | IF '(' condicion ')' THEN bloque_sentencia_ejecutable ';'
  77               | IF '(' condicion ')' THEN bloque_sentencia_ejecutable error
  78               | IF THEN bloque_sentencia_ejecutable END_IF error
  79               | IF '(' condicion ')' THEN bloque_sentencia_ejecutable bloque_sentencia_ejecutable END_IF ';'
  80               | IF '(' condicion ')' THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable END_IF
  81               | IF '(' condicion ')' THEN bloque_sentencia_ejecutable ELSE END_IF ';'
  82               | IF '(' condicion ')' THEN ELSE bloque_sentencia_ejecutable END_IF ';'
  83               | IF '(' condicion ')' THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable ';'
  84               | IF condicion THEN bloque_sentencia_ejecutable END_IF ';'
  85               | IF '(' condicion THEN bloque_sentencia_ejecutable END_IF ';'
  86               | IF condicion ')' THEN bloque_sentencia_ejecutable END_IF ';'
  87               | IF '(' condicion THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable END_IF ';'
  88               | IF condicion ')' THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable END_IF ';'
  89               | IF condicion THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable END_IF ';'
  90               | IF '(' condicion ')' THEN sentencia_ejecucion END_IF ';'
  91               | IF '(' condicion ')' THEN sentencia_ejecucion ELSE bloque_sentencia_ejecutable END_IF ';'
  92               | IF '(' condicion ')' THEN bloque_sentencia_ejecutable ELSE sentencia_ejecucion END_IF ';'
  93               | IF '(' condicion ')' THEN sentencia_ejecucion ELSE sentencia_ejecucion END_IF ';'

  94  condicion : expresion comparador expresion
  95            | expresion error expresion

  96  asignacion : lista_variables ASIGNACION lista_expresiones ';'

  97  expresion : expresion '+' termino
  98            | expresion '-' termino
  99            | expresion '+' '+' termino
 100            | expresion '-' '+' termino
 101            | '+' termino
 102            | expresion '+'
 103            | expresion '-'
 104            | TOD '(' expresion ')'
 105            | TOD '(' ')'
 106            | termino

 107  termino : termino '*' factor
 108          | termino '/' factor
 109          | termino '*' '*' factor
 110          | termino '*' '/' factor
 111          | termino '/' '/' factor
 112          | termino '/' '*' factor
 113          | termino '/'
 114          | termino '*'
 115          | '/' factor
 116          | '*' factor
 117          | factor

 118  factor : invocacion_funcion
 119         | ID
 120         | id_compuesta
 121         | LONGINT
 122         | '-' LONGINT
 123         | HEXA
 124         | '-' HEXA
 125         | DOUBLE
 126         | '-' DOUBLE

 127  lista_variables : lista_variables ',' ID
 128                  | lista_variables ',' id_compuesta
 129                  | id_compuesta
 130                  | ID

 131  id_compuesta : ID '.' ID

 132  lista_expresiones : lista_expresiones ',' expresion
 133                    | expresion

 134  lista_tipos : lista_tipos ',' tipo
 135              | lista_tipos tipo
 136              | tipo

 137  tipo : DOUBLE
 138       | LONGINT
 139       | ID
 140       | TYPEDEF ID

 141  comparador : '<'
 142             | '>'
 143             | MAYOR_IGUAL
 144             | MENOR_IGUAL
 145             | DISTINTO

state 0
	$accept : . prog $end  (0)

	BEGIN  shift 1
	ID  shift 2
	.  error

	prog  goto 3


state 1
	prog : BEGIN . END  (3)
	prog : BEGIN . cuerpo  (6)

	IF  shift 4
	END  shift 5
	OUTF  shift 6
	TYPEDEF  shift 7
	FUN  shift 8
	REPEAT  shift 9
	GOTO  shift 10
	ID  shift 11
	LONGINT  shift 12
	CML  shift 13
	DOUBLE  shift 14
	ETIQUETA  shift 15
	.  error

	cuerpo  goto 16
	sentencia  goto 17
	sentencia_declaracion  goto 18
	sentencia_ejecucion  goto 19
	tipo  goto 20
	lista_variables  goto 21
	declaracion_funcion  goto 22
	asignacion  goto 23
	condicion_if  goto 24
	sentencia_print  goto 25
	sentencia_while  goto 26
	invocacion_funcion  goto 27
	id_compuesta  goto 28


state 2
	prog : ID . BEGIN cuerpo END  (1)
	prog : ID . cuerpo END  (2)
	prog : ID . BEGIN cuerpo  (4)
	prog : ID . cuerpo  (5)

	IF  shift 4
	BEGIN  shift 29
	OUTF  shift 6
	TYPEDEF  shift 7
	FUN  shift 8
	REPEAT  shift 9
	GOTO  shift 10
	ID  shift 11
	LONGINT  shift 12
	CML  shift 13
	DOUBLE  shift 14
	ETIQUETA  shift 15
	.  error

	cuerpo  goto 30
	sentencia  goto 17
	sentencia_declaracion  goto 18
	sentencia_ejecucion  goto 19
	tipo  goto 20
	lista_variables  goto 21
	declaracion_funcion  goto 22
	asignacion  goto 23
	condicion_if  goto 24
	sentencia_print  goto 25
	sentencia_while  goto 26
	invocacion_funcion  goto 27
	id_compuesta  goto 28


state 3
	$accept : prog . $end  (0)

	$end  accept


state 4
	condicion_if : IF . '(' condicion ')' THEN bloque_sentencia_ejecutable END_IF ';'  (71)
	condicion_if : IF . '(' condicion ')' THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable END_IF ';'  (72)
	condicion_if : IF . '(' condicion ')' bloque_sentencia_ejecutable END_IF ';'  (73)
	condicion_if : IF . '(' ')' THEN bloque_sentencia_ejecutable END_IF ';'  (74)
	condicion_if : IF . '(' condicion ')' THEN error END_IF ';'  (75)
	condicion_if : IF . '(' condicion ')' THEN bloque_sentencia_ejecutable ';'  (76)
	condicion_if : IF . '(' condicion ')' THEN bloque_sentencia_ejecutable error  (77)
	condicion_if : IF . THEN bloque_sentencia_ejecutable END_IF error  (78)
	condicion_if : IF . '(' condicion ')' THEN bloque_sentencia_ejecutable bloque_sentencia_ejecutable END_IF ';'  (79)
	condicion_if : IF . '(' condicion ')' THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable END_IF  (80)
	condicion_if : IF . '(' condicion ')' THEN bloque_sentencia_ejecutable ELSE END_IF ';'  (81)
	condicion_if : IF . '(' condicion ')' THEN ELSE bloque_sentencia_ejecutable END_IF ';'  (82)
	condicion_if : IF . '(' condicion ')' THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable ';'  (83)
	condicion_if : IF . condicion THEN bloque_sentencia_ejecutable END_IF ';'  (84)
	condicion_if : IF . '(' condicion THEN bloque_sentencia_ejecutable END_IF ';'  (85)
	condicion_if : IF . condicion ')' THEN bloque_sentencia_ejecutable END_IF ';'  (86)
	condicion_if : IF . '(' condicion THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable END_IF ';'  (87)
	condicion_if : IF . condicion ')' THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable END_IF ';'  (88)
	condicion_if : IF . condicion THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable END_IF ';'  (89)
	condicion_if : IF . '(' condicion ')' THEN sentencia_ejecucion END_IF ';'  (90)
	condicion_if : IF . '(' condicion ')' THEN sentencia_ejecucion ELSE bloque_sentencia_ejecutable END_IF ';'  (91)
	condicion_if : IF . '(' condicion ')' THEN bloque_sentencia_ejecutable ELSE sentencia_ejecucion END_IF ';'  (92)
	condicion_if : IF . '(' condicion ')' THEN sentencia_ejecucion ELSE sentencia_ejecucion END_IF ';'  (93)

	THEN  shift 31
	ID  shift 32
	LONGINT  shift 33
	HEXA  shift 34
	DOUBLE  shift 35
	TOD  shift 36
	'+'  shift 37
	'-'  shift 38
	'*'  shift 39
	'/'  shift 40
	'('  shift 41
	.  error

	factor  goto 42
	expresion  goto 43
	invocacion_funcion  goto 44
	condicion  goto 45
	termino  goto 46
	id_compuesta  goto 47


state 5
	prog : BEGIN END .  (3)

	.  reduce 3


state 6
	sentencia_print : OUTF . '(' CML ')' ';'  (56)
	sentencia_print : OUTF . '(' expresion ')' ';'  (57)
	sentencia_print : OUTF . '(' ')' ';'  (58)
	sentencia_print : OUTF . '(' expresion ')'  (59)
	sentencia_print : OUTF . '(' CML ')'  (60)
	sentencia_print : OUTF . CML ';'  (61)
	sentencia_print : OUTF . expresion ';'  (62)
	sentencia_print : OUTF . '(' error ')' ';'  (63)

	ID  shift 32
	LONGINT  shift 33
	HEXA  shift 34
	CML  shift 48
	DOUBLE  shift 35
	TOD  shift 36
	'+'  shift 37
	'-'  shift 38
	'*'  shift 39
	'/'  shift 40
	'('  shift 49
	.  error

	factor  goto 42
	expresion  goto 50
	invocacion_funcion  goto 44
	termino  goto 46
	id_compuesta  goto 47


state 7
	sentencia_declaracion : TYPEDEF . ID ASIGNACION tipo '[' subrango ']' ';'  (14)
	sentencia_declaracion : TYPEDEF . ID ASIGNACION tipo '[' subrango ';'  (15)
	sentencia_declaracion : TYPEDEF . ID ASIGNACION tipo subrango ']' ';'  (16)
	sentencia_declaracion : TYPEDEF . ID ASIGNACION tipo subrango ';'  (17)
	sentencia_declaracion : TYPEDEF . ID ASIGNACION tipo '[' ']' ';'  (18)
	sentencia_declaracion : TYPEDEF . ASIGNACION tipo '[' subrango ']' ';'  (19)
	sentencia_declaracion : TYPEDEF . ID ASIGNACION '[' subrango ']' ';'  (20)
	sentencia_declaracion : TYPEDEF . STRUCT '<' lista_tipos '>' '(' lista_variables ',' ')' ID ';'  (21)
	sentencia_declaracion : TYPEDEF . STRUCT lista_tipos '(' lista_variables ',' ')' ID ';'  (22)
	sentencia_declaracion : TYPEDEF . '<' lista_tipos '>' '(' lista_variables ',' ')' ID ';'  (23)
	sentencia_declaracion : TYPEDEF . STRUCT '<' lista_tipos '>' '(' lista_variables ',' ')' ';'  (24)
	tipo : TYPEDEF . ID  (140)

	ID  shift 51
	STRUCT  shift 52
	ASIGNACION  shift 53
	'<'  shift 54
	.  error


state 8
	declaracion_funcion : FUN . ID '(' parametro ')' BEGIN cuerpo RET '(' expresion ')' ';' END  (29)

	ID  shift 55
	.  error


state 9
	sentencia_while : REPEAT . bloque_sentencia_ejecutable WHILE '(' condicion ')' ';'  (48)
	sentencia_while : REPEAT . bloque_sentencia_ejecutable '(' condicion ')' ';'  (49)
	sentencia_while : REPEAT . bloque_sentencia_ejecutable WHILE '(' condicion ')'  (50)
	sentencia_while : REPEAT . bloque_sentencia_ejecutable WHILE '(' ')' ';'  (51)
	sentencia_while : REPEAT . bloque_sentencia_ejecutable WHILE condicion ')' ';'  (52)
	sentencia_while : REPEAT . bloque_sentencia_ejecutable WHILE '(' condicion ';'  (53)
	sentencia_while : REPEAT . bloque_sentencia_ejecutable WHILE condicion ';'  (54)
	sentencia_while : REPEAT . WHILE '(' condicion ')' ';'  (55)

	BEGIN  shift 56
	WHILE  shift 57
	.  error

	bloque_sentencia_ejecutable  goto 58


state 10
	sentencia_ejecucion : GOTO . ETIQUETA ';'  (43)
	sentencia_ejecucion : GOTO . ETIQUETA  (44)
	sentencia_ejecucion : GOTO . ';'  (45)

	ETIQUETA  shift 59
	';'  shift 60
	.  error


state 11
	invocacion_funcion : ID . '(' expresion ')'  (66)
	invocacion_funcion : ID . '(' ')'  (67)
	lista_variables : ID .  (130)
	id_compuesta : ID . '.' ID  (131)
	tipo : ID .  (139)

	'.'  shift 61
	'('  shift 62
	FUN  reduce 139
	ID  reduce 139
	ASIGNACION  reduce 130
	','  reduce 130


state 12
	tipo : LONGINT .  (138)

	.  reduce 138


state 13
	sentencia_ejecucion : CML .  (47)

	.  reduce 47


state 14
	tipo : DOUBLE .  (137)

	.  reduce 137


state 15
	sentencia_ejecucion : ETIQUETA .  (46)

	.  reduce 46


state 16
	prog : BEGIN cuerpo .  (6)
	cuerpo : cuerpo . sentencia  (7)

	IF  shift 4
	OUTF  shift 6
	TYPEDEF  shift 7
	FUN  shift 8
	REPEAT  shift 9
	GOTO  shift 10
	ID  shift 11
	LONGINT  shift 12
	CML  shift 13
	DOUBLE  shift 14
	ETIQUETA  shift 15
	$end  reduce 6

	sentencia  goto 63
	sentencia_declaracion  goto 18
	sentencia_ejecucion  goto 19
	tipo  goto 20
	lista_variables  goto 21
	declaracion_funcion  goto 22
	asignacion  goto 23
	condicion_if  goto 24
	sentencia_print  goto 25
	sentencia_while  goto 26
	invocacion_funcion  goto 27
	id_compuesta  goto 28


state 17
	cuerpo : sentencia .  (8)

	.  reduce 8


state 18
	sentencia : sentencia_declaracion .  (9)

	.  reduce 9


state 19
	sentencia : sentencia_ejecucion .  (10)

	.  reduce 10


state 20
	sentencia_declaracion : tipo . lista_variables ';'  (11)
	sentencia_declaracion : tipo . lista_variables  (12)
	declaracion_funcion : tipo . FUN ID '(' parametro ')' BEGIN cuerpo RET '(' expresion ')' ';' END  (27)
	declaracion_funcion : tipo . FUN ID '(' parametro ')' BEGIN cuerpo END  (28)
	declaracion_funcion : tipo . ID '(' parametro ')' BEGIN cuerpo RET '(' expresion ')' ';' END  (30)
	declaracion_funcion : tipo . FUN '(' parametro ')' BEGIN cuerpo RET '(' expresion ')' ';' END  (31)
	declaracion_funcion : tipo . FUN ID parametro BEGIN cuerpo RET '(' expresion ')' ';' END  (32)
	declaracion_funcion : tipo . FUN ID '(' parametro ')' BEGIN cuerpo RET expresion ';' END  (33)
	declaracion_funcion : tipo . FUN ID '(' ')' BEGIN cuerpo RET '(' expresion ')' ';' END  (34)
	declaracion_funcion : tipo . FUN ID '(' parametro ')' cuerpo RET '(' expresion ')' ';' END  (35)
	declaracion_funcion : tipo . FUN ID '(' parametro ')' BEGIN cuerpo error  (36)
	declaracion_funcion : tipo . FUN ID '(' parametro ')' BEGIN END  (37)

	FUN  shift 64
	ID  shift 65
	.  error

	lista_variables  goto 66
	id_compuesta  goto 28


state 21
	asignacion : lista_variables . ASIGNACION lista_expresiones ';'  (96)
	lista_variables : lista_variables . ',' ID  (127)
	lista_variables : lista_variables . ',' id_compuesta  (128)

	ASIGNACION  shift 67
	','  shift 68
	.  error


state 22
	sentencia_declaracion : declaracion_funcion .  (13)

	.  reduce 13


state 23
	sentencia_ejecucion : asignacion .  (38)

	.  reduce 38


state 24
	sentencia_ejecucion : condicion_if .  (39)

	.  reduce 39


state 25
	sentencia_ejecucion : sentencia_print .  (40)

	.  reduce 40


state 26
	sentencia_ejecucion : sentencia_while .  (41)

	.  reduce 41


state 27
	sentencia_ejecucion : invocacion_funcion . ';'  (42)

	';'  shift 69
	.  error


state 28
	lista_variables : id_compuesta .  (129)

	.  reduce 129


state 29
	prog : ID BEGIN . cuerpo END  (1)
	prog : ID BEGIN . cuerpo  (4)

	IF  shift 4
	OUTF  shift 6
	TYPEDEF  shift 7
	FUN  shift 8
	REPEAT  shift 9
	GOTO  shift 10
	ID  shift 11
	LONGINT  shift 12
	CML  shift 13
	DOUBLE  shift 14
	ETIQUETA  shift 15
	.  error

	cuerpo  goto 70
	sentencia  goto 17
	sentencia_declaracion  goto 18
	sentencia_ejecucion  goto 19
	tipo  goto 20
	lista_variables  goto 21
	declaracion_funcion  goto 22
	asignacion  goto 23
	condicion_if  goto 24
	sentencia_print  goto 25
	sentencia_while  goto 26
	invocacion_funcion  goto 27
	id_compuesta  goto 28


state 30
	prog : ID cuerpo . END  (2)
	prog : ID cuerpo .  (5)
	cuerpo : cuerpo . sentencia  (7)

	IF  shift 4
	END  shift 71
	OUTF  shift 6
	TYPEDEF  shift 7
	FUN  shift 8
	REPEAT  shift 9
	GOTO  shift 10
	ID  shift 11
	LONGINT  shift 12
	CML  shift 13
	DOUBLE  shift 14
	ETIQUETA  shift 15
	$end  reduce 5

	sentencia  goto 63
	sentencia_declaracion  goto 18
	sentencia_ejecucion  goto 19
	tipo  goto 20
	lista_variables  goto 21
	declaracion_funcion  goto 22
	asignacion  goto 23
	condicion_if  goto 24
	sentencia_print  goto 25
	sentencia_while  goto 26
	invocacion_funcion  goto 27
	id_compuesta  goto 28


state 31
	condicion_if : IF THEN . bloque_sentencia_ejecutable END_IF error  (78)

	BEGIN  shift 56
	.  error

	bloque_sentencia_ejecutable  goto 72


state 32
	invocacion_funcion : ID . '(' expresion ')'  (66)
	invocacion_funcion : ID . '(' ')'  (67)
	factor : ID .  (119)
	id_compuesta : ID . '.' ID  (131)

	'.'  shift 61
	'('  shift 62
	error  reduce 119
	THEN  reduce 119
	ID  reduce 119
	LONGINT  reduce 119
	HEXA  reduce 119
	DOUBLE  reduce 119
	DISTINTO  reduce 119
	MENOR_IGUAL  reduce 119
	MAYOR_IGUAL  reduce 119
	'+'  reduce 119
	'-'  reduce 119
	'*'  reduce 119
	'/'  reduce 119
	';'  reduce 119
	']'  reduce 119
	'<'  reduce 119
	'>'  reduce 119
	','  reduce 119
	')'  reduce 119


state 33
	factor : LONGINT .  (121)

	.  reduce 121


state 34
	factor : HEXA .  (123)

	.  reduce 123


state 35
	factor : DOUBLE .  (125)

	.  reduce 125


state 36
	expresion : TOD . '(' expresion ')'  (104)
	expresion : TOD . '(' ')'  (105)

	'('  shift 73
	.  error


state 37
	expresion : '+' . termino  (101)

	ID  shift 32
	LONGINT  shift 33
	HEXA  shift 34
	DOUBLE  shift 35
	'-'  shift 38
	'*'  shift 39
	'/'  shift 40
	.  error

	factor  goto 42
	invocacion_funcion  goto 44
	termino  goto 74
	id_compuesta  goto 47


state 38
	factor : '-' . LONGINT  (122)
	factor : '-' . HEXA  (124)
	factor : '-' . DOUBLE  (126)

	LONGINT  shift 75
	HEXA  shift 76
	DOUBLE  shift 77
	.  error


state 39
	termino : '*' . factor  (116)

	ID  shift 32
	LONGINT  shift 33
	HEXA  shift 34
	DOUBLE  shift 35
	'-'  shift 38
	.  error

	factor  goto 78
	invocacion_funcion  goto 44
	id_compuesta  goto 47


state 40
	termino : '/' . factor  (115)

	ID  shift 32
	LONGINT  shift 33
	HEXA  shift 34
	DOUBLE  shift 35
	'-'  shift 38
	.  error

	factor  goto 79
	invocacion_funcion  goto 44
	id_compuesta  goto 47


state 41
	condicion_if : IF '(' . condicion ')' THEN bloque_sentencia_ejecutable END_IF ';'  (71)
	condicion_if : IF '(' . condicion ')' THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable END_IF ';'  (72)
	condicion_if : IF '(' . condicion ')' bloque_sentencia_ejecutable END_IF ';'  (73)
	condicion_if : IF '(' . ')' THEN bloque_sentencia_ejecutable END_IF ';'  (74)
	condicion_if : IF '(' . condicion ')' THEN error END_IF ';'  (75)
	condicion_if : IF '(' . condicion ')' THEN bloque_sentencia_ejecutable ';'  (76)
	condicion_if : IF '(' . condicion ')' THEN bloque_sentencia_ejecutable error  (77)
	condicion_if : IF '(' . condicion ')' THEN bloque_sentencia_ejecutable bloque_sentencia_ejecutable END_IF ';'  (79)
	condicion_if : IF '(' . condicion ')' THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable END_IF  (80)
	condicion_if : IF '(' . condicion ')' THEN bloque_sentencia_ejecutable ELSE END_IF ';'  (81)
	condicion_if : IF '(' . condicion ')' THEN ELSE bloque_sentencia_ejecutable END_IF ';'  (82)
	condicion_if : IF '(' . condicion ')' THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable ';'  (83)
	condicion_if : IF '(' . condicion THEN bloque_sentencia_ejecutable END_IF ';'  (85)
	condicion_if : IF '(' . condicion THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable END_IF ';'  (87)
	condicion_if : IF '(' . condicion ')' THEN sentencia_ejecucion END_IF ';'  (90)
	condicion_if : IF '(' . condicion ')' THEN sentencia_ejecucion ELSE bloque_sentencia_ejecutable END_IF ';'  (91)
	condicion_if : IF '(' . condicion ')' THEN bloque_sentencia_ejecutable ELSE sentencia_ejecucion END_IF ';'  (92)
	condicion_if : IF '(' . condicion ')' THEN sentencia_ejecucion ELSE sentencia_ejecucion END_IF ';'  (93)

	ID  shift 32
	LONGINT  shift 33
	HEXA  shift 34
	DOUBLE  shift 35
	TOD  shift 36
	'+'  shift 37
	'-'  shift 38
	'*'  shift 39
	'/'  shift 40
	')'  shift 80
	.  error

	factor  goto 42
	expresion  goto 43
	invocacion_funcion  goto 44
	condicion  goto 81
	termino  goto 46
	id_compuesta  goto 47


state 42
	termino : factor .  (117)

	.  reduce 117


state 43
	condicion : expresion . comparador expresion  (94)
	condicion : expresion . error expresion  (95)
	expresion : expresion . '+' termino  (97)
	expresion : expresion . '-' termino  (98)
	expresion : expresion . '+' '+' termino  (99)
	expresion : expresion . '-' '+' termino  (100)
	expresion : expresion . '+'  (102)
	expresion : expresion . '-'  (103)

	error  shift 82
	DISTINTO  shift 83
	MENOR_IGUAL  shift 84
	MAYOR_IGUAL  shift 85
	'+'  shift 86
	'-'  shift 87
	'<'  shift 88
	'>'  shift 89
	.  error

	comparador  goto 90


state 44
	factor : invocacion_funcion .  (118)

	.  reduce 118


state 45
	condicion_if : IF condicion . THEN bloque_sentencia_ejecutable END_IF ';'  (84)
	condicion_if : IF condicion . ')' THEN bloque_sentencia_ejecutable END_IF ';'  (86)
	condicion_if : IF condicion . ')' THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable END_IF ';'  (88)
	condicion_if : IF condicion . THEN bloque_sentencia_ejecutable ELSE bloque_sentencia_ejecutable END_IF ';'  (89)

	THEN  shift 91
	')'  shift 92
	.  error


state 46
	expresion : termino .  (106)
	termino : termino . '*' factor  (107)
	termino : termino . '/' factor  (108)
	termino : termino . '*' '*' factor  (109)
	termino : termino . '*' '/' factor  (110)
	termino : termino . '/' '/' factor  (111)
	termino : termino . '/' '*' factor  (112)
	termino : termino . '/'  (113)
	termino : termino . '*'  (114)

	'*'  shift 93
	'/'  shift 94
	error  reduce 106
	THEN  reduce 106
	DISTINTO  reduce 106
	MENOR_IGUAL  reduce 106
	MAYOR_IGUAL  reduce 106
	'+'  reduce 106
	'-'  reduce 106
	';'  reduce 106
	'<'  reduce 106
	'>'  reduce 106
	','  reduce 106
	')'  reduce 106


state 47
	factor : id_compuesta .  (120)

	.  reduce 120


state 48
	sentencia_print : OUTF CML . ';'  (61)

	';'  shift 95
	.  error


state 49
	sentencia_print : OUTF '(' . CML ')' ';'  (56)
	sentencia_print : OUTF '(' . expresion ')' ';'  (57)
	sentencia_print : OUTF '(' . ')' ';'  (58)
	sentencia_print : OUTF '(' . expresion ')'  (59)
	sentencia_print : OUTF '(' . CML ')'  (60)
	sentencia_print : OUTF '(' . error ')' ';'  (63)

	error  shift 96
	ID  shift 32
	LONGINT  shift 33
	HEXA  shift 34
	CML  shift 97
	DOUBLE  shift 35
	TOD  shift 36
	'+'  shift 37
	'-'  shift 38
	'*'  shift 39
	'/'  shift 40
	')'  shift 98
	.  error

	factor  goto 42
	expresion  goto 99
	invocacion_funcion  goto 44
	termino  goto 46
	id_compuesta  goto 47


state 50
	sentencia_print : OUTF expresion . ';'  (62)
	expresion : expresion . '+' termino  (97)
	expresion : expresion . '-' termino  (98)
	expresion : expresion . '+' '+' termino  (99)
	expresion : expresion . '-' '+' termino  (100)
	expresion : expresion . '+'  (102)
	expresion : expresion . '-'  (103)

	'+'  shift 86
	'-'  shift 87
	';'  shift 100
	.  error


state 51
	sentencia_declaracion : TYPEDEF ID . ASIGNACION tipo '[' subrango ']' ';'  (14)
	sentencia_declaracion : TYPEDEF ID . ASIGNACION tipo '[' subrango ';'  (15)
	sentencia_declaracion : TYPEDEF ID . ASIGNACION tipo subrango ']' ';'  (16)
	sentencia_declaracion : TYPEDEF ID . ASIGNACION tipo subrango ';'  (17)
	sentencia_declaracion : TYPEDEF ID . ASIGNACION tipo '[' ']' ';'  (18)
	sentencia_declaracion : TYPEDEF ID . ASIGNACION '[' subrango ']' ';'  (20)
	tipo : TYPEDEF ID .  (140)

	ASIGNACION  shift 101
	FUN  reduce 140
	ID  reduce 140


state 52
	sentencia_declaracion : TYPEDEF STRUCT . '<' lista_tipos '>' '(' lista_variables ',' ')' ID ';'  (21)
	sentencia_declaracion : TYPEDEF STRUCT . lista_tipos '(' lista_variables ',' ')' ID ';'  (22)
	sentencia_declaracion : TYPEDEF STRUCT . '<' lista_tipos '>' '(' lista_variables ',' ')' ';'  (24)

	TYPEDEF  shift 102
	ID  shift 103
	LONGINT  shift 12
	DOUBLE  shift 14
	'<'  shift 104
	.  error

	tipo  goto 105
	lista_tipos  goto 106


state 53
	sentencia_declaracion : TYPEDEF ASIGNACION . tipo '[' subrango ']' ';'  (19)

	TYPEDEF  shift 102
	ID  shift 103
	LONGINT  shift 12
	DOUBLE  shift 14
	.  error

	tipo  goto 107


state 54
	sentencia_declaracion : TYPEDEF '<' . lista_tipos '>' '(' lista_variables ',' ')' ID ';'  (23)

	TYPEDEF  shift 102
	ID  shift 103
	LONGINT  shift 12
	DOUBLE  shift 14
	.  error

	tipo  goto 105
	lista_tipos  goto 108

